<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ui.kl_basic.chapter_5.Chapter5MainActivity">

    <ImageView
        android:layout_width="@dimen/dimen_100dp"
        android:layout_height="@dimen/dimen_100dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dimens50dp"
        android:layout_marginBottom="@dimen/dimens50dp"
        android:contentDescription="@string/apps"
        android:src="@drawable/ic_baseline_lock"
        app:tint="@color/dark_gray" />

    <TextView
        style="@style/textStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimens_12dp"
        android:layout_marginTop="@dimen/dimens_20dp"
        android:text="@string/username" />

    <EditText
        style="@style/etCapWords"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimens50dp"
        android:layout_marginHorizontal="@dimen/dimens_12dp"
        android:layout_marginTop="@dimen/dimens_10dp"
        android:hint="@string/input_your_name"
        android:importantForAutofill="no"
        android:paddingHorizontal="@dimen/dimens_10dp" />

    <TextView
        style="@style/textStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimens_12dp"
        android:layout_marginTop="@dimen/dimens_20dp"
        android:text="@string/password" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_marginHorizontal="@dimen/dimens_12dp"
        android:layout_marginTop="@dimen/dimens_10dp"
        android:layout_height="wrap_content"
        app:hintEnabled="false"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/etPasswordsText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimens50dp"
            android:hint="@string/input_your_password"
            android:importantForAutofill="no" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        style="@style/buttonClicked"
        android:layout_width="@dimen/dimen_100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginHorizontal="@dimen/dimens_12dp"
        android:layout_marginTop="@dimen/dimens_25dp"
        android:text="@string/login" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/textCenter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimens50dp"
        android:text="@string/forgot_password"
        android:textAllCaps="false"
        android:textColor="@color/dark_blue" />

</LinearLayout>